[gd_scene load_steps=4 format=3 uid="uid://cmtcjeiflrh68"]

[ext_resource type="Script" path="res://actors/rocks/rock_spawner.gd" id="1_6tk34"]
[ext_resource type="Texture2D" uid="uid://c8k1nd0o4e1p8" path="res://actors/rocks/art/rockGrey_small2.png" id="1_et34w"]
[ext_resource type="PackedScene" uid="uid://bhbrt1ttpal" path="res://actors/food/Food.tscn" id="3_hwtem"]

[node name="Rock" type="StaticBody2D"]
texture_filter = 1
script = ExtResource("1_6tk34")
food_scene = ExtResource("3_hwtem")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_et34w")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-5, -15, -15, -4, -14, 10, -3, 15, 10, 9, 15, 1, -3, -15)

[node name="FoodGroup1" type="Node2D" parent="."]
visible = false

[node name="Food" parent="FoodGroup1" instance=ExtResource("3_hwtem")]
position = Vector2(-21, -5)

[node name="Food2" parent="FoodGroup1" instance=ExtResource("3_hwtem")]
position = Vector2(-21, 7)

[node name="Food3" parent="FoodGroup1" instance=ExtResource("3_hwtem")]
position = Vector2(-32, 1)

[node name="FoodGroup2" type="Node2D" parent="."]
visible = false

[node name="Food4" parent="FoodGroup2" instance=ExtResource("3_hwtem")]
position = Vector2(-10, 17)

[node name="Food5" parent="FoodGroup2" instance=ExtResource("3_hwtem")]
position = Vector2(3, 18)

[node name="Food6" parent="FoodGroup2" instance=ExtResource("3_hwtem")]
position = Vector2(-4, 27)

[node name="FoodGroup3" type="Node2D" parent="."]
visible = false

[node name="Food7" parent="FoodGroup3" instance=ExtResource("3_hwtem")]
position = Vector2(16, 11)

[node name="Food8" parent="FoodGroup3" instance=ExtResource("3_hwtem")]
position = Vector2(19, -0.999999)

[node name="Food9" parent="FoodGroup3" instance=ExtResource("3_hwtem")]
position = Vector2(28, 8)
